--- a/index.html
+++ b/index.html
@@ -20,73 +20,73 @@
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Terminar o ensino medio</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
-                            <p class="contador-digito-texto">dias</p>
+                            <p class="contador-digito-texto">109</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas0"></p>
-                            <p class="contador-digito-texto">horas</p>
+                            <p class="contador-digito-texto">20</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="min0"></p>
-                            <p class="contador-digito-texto">min</p>
+                            <p class="contador-digito-texto">4</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg0"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-texto">3</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                    <h3 class="aba-conteudo-titulo-principal">colheita</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
-                            <p class="contador-digito-texto">dias</p>
+                            <p class="contador-digito-texto">30</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas1"></p>
-                            <p class="contador-digito-texto">horas</p>
+                            <p class="contador-digito-texto">6</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="min1"></p>
-                            <p class="contador-digito-texto">min</p>
+                            <p class="contador-digito-texto">30</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg1"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-texto">9</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">meu trator</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias2"></p>
-                            <p class="contador-digito-texto">dias</p>
+                            <p class="contador-digito-texto">200</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas2"></p>
-                            <p class="contador-digito-texto">horas</p>
+                            <p class="contador-digito-texto">5</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="min2"></p>
-                            <p class="contador-digito-texto">min</p>
+                            <p class="contador-digito-texto">54</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg2"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-texto">3</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Meu carro</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -95,15 +95,15 @@
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas3"></p>
-                            <p class="contador-digito-texto">horas</p>
+                            <p class="contador-digito-texto">39</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="min3"></p>
-                            <p class="contador-digito-texto">min</p>
+                            <p class="contador-digito-texto">18</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg3"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-texto">98</p>
                         </div>
                     </div>
                 </div>
