--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Cursos na Alura</button>
-                <button class="botao">Criar projetos em Javascript</button>
-                <button class="botao">Criar um portfolio</button>
-                <button class="botao">Atualizar meu currículo</button>
+                <button class="botao ativo">Terminar o ensino medio</button>
+                <button class="botao">colheita</button>
+                <button class="botao">meu trator</button>
+                <button class="botao">Meu carro</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
@@ -91,7 +91,7 @@
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
-                            <p class="contador-digito-texto">dias</p>
+                            <p class="contador-digito-texto">190</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas3"></p>
